// Copyright 2022 Tigris Data, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/api/annotations.proto";

option go_package = "github.com/tigrisdata/tigrisdb/api";
option java_package = "com.tigrisdata.db.api.v1.grpc";

// BUG: gnostic protoc-gen-openapi doesn't support enum generation
// https://github.com/google/gnostic/issues/255

message ErrorDetails {
  uint32 code = 1;
  string msg = 2;
}

message WriteOptions {
  TransactionCtx tx_ctx = 1;
}

message ReadRequestOptions {
  TransactionCtx tx_ctx = 1;
  int64 limit = 2;
  int64 skip = 3;
  bytes offset = 4;
}

message DatabaseOptions {}
message CollectionOptions {}
message TransactionOptions {}

message TransactionCtx {
  string id = 1;
  string origin = 2;
}

message BeginTransactionRequest {
  string db = 1;
  TransactionOptions options = 2;
}
message BeginTransactionResponse {
  TransactionCtx tx_ctx = 1;
}

message CommitTransactionRequest {
  string db = 1;
  TransactionCtx tx_ctx = 2;
}
message CommitTransactionResponse {}

message RollbackTransactionRequest {
  string db = 1;
  TransactionCtx tx_ctx = 2;
}
message RollbackTransactionResponse {}

message InsertRequestOptions {
  WriteOptions write_options = 1;
  bool must_not_exist = 2;
}

message InsertRequest {
  string db = 1;
  string collection = 2;
  repeated bytes documents = 3;
  InsertRequestOptions options = 4;
}

message InsertResponse {}

message DeleteRequestOptions {
  WriteOptions write_options = 1;
}

message DeleteRequest {
  string db = 1;
  string collection = 2;
  bytes filter = 3;
  DeleteRequestOptions options = 4;
}

message DeleteResponse {}

message UpdateRequestOptions {
  WriteOptions write_options = 1;
}

message UpdateRequest {
  string db = 1;
  string collection = 2;
  bytes fields = 3;
  bytes filter = 4;
  UpdateRequestOptions options = 5;
}

message UpdateResponse {
  int32 rc = 1;
}

message ReadRequest {
  string db = 1;
  string collection = 2;
  bytes filter = 3;
  bytes fields = 4;
  ReadRequestOptions options = 5;
}

message ReadResponse {
  bytes doc = 1;
  bytes key = 2;
}

message CreateDatabaseRequest {
  string db = 1;
  DatabaseOptions options = 2;
}

message CreateDatabaseResponse {
  string msg = 1;
}

message DropDatabaseRequest {
  string db = 1;
  DatabaseOptions options = 2;
}

message DropDatabaseResponse {
  string msg = 1;
}

message CreateCollectionRequest {
  string db = 1;
  string collection = 2;
  bytes schema = 3;
  CollectionOptions options = 4;
}

message CreateCollectionResponse {
  string msg = 1;
}

message AlterCollectionRequest {
  string db = 1;
  string collection = 2;
  bytes schema = 3;
  CollectionOptions options = 4;
}

message AlterCollectionResponse {
  string msg = 1;
}

message DropCollectionRequest {
  string db = 1;
  string collection = 2;
  CollectionOptions options = 3;
}

message DropCollectionResponse {
  string msg = 1;
}

message TruncateCollectionRequest {
  string db = 1;
  string collection = 2;
}

message TruncateCollectionResponse {
  string msg = 1;
}

message ListDatabasesRequest {
}

message ListDatabasesResponse {
  repeated string dbs = 1;
}

message ListCollectionsRequest {
  string db = 1;
}

message ListCollectionsResponse {
  repeated string collections = 1;
}

service TigrisDB {
  // Transactional APIs
  rpc BeginTransaction(BeginTransactionRequest) returns (BeginTransactionResponse) {
    option (google.api.http) = {
      post : "/api/v1/databases/{db}/transactions/begin"
      body : "*"
    };
  }
  rpc CommitTransaction(CommitTransactionRequest) returns (CommitTransactionResponse) {
    option (google.api.http) = {
      post : "/api/v1/databases/{db}/transactions/commit"
      body : "*"
    };
  }
  rpc RollbackTransaction(RollbackTransactionRequest) returns (RollbackTransactionResponse) {
    option (google.api.http) = {
      post : "/api/v1/databases/{db}/transactions/rollback"
      body : "*"
    };
  }

  // Following APIs are related to DMLs supported by TigrisDB
  rpc Insert(InsertRequest) returns (InsertResponse) {
    option (google.api.http) = {
      post : "/api/v1/databases/{db}/collections/{collection}/documents/insert"
      body : "*"
    };
  }
  rpc Delete(DeleteRequest) returns (DeleteResponse) {
    option (google.api.http) = {
      delete : "/api/v1/databases/{db}/collections/{collection}/documents/delete"
      body : "*"
    };
  }
  rpc Update(UpdateRequest) returns (UpdateResponse) {
    option (google.api.http) = {
      put : "/api/v1/databases/{db}/collections/{collection}/documents/update"
      body : "*"
    };
  }
  rpc Read(ReadRequest) returns (stream ReadResponse) {
    option (google.api.http) = {
      post : "/api/v1/databases/{db}/collections/{collection}/documents/read"
      body : "*"
    };
  }

  // The following APIs are related to DDLs supported by TigrisDB
  rpc CreateCollection(CreateCollectionRequest) returns (CreateCollectionResponse) {
    option (google.api.http) = {
      post : "/api/v1/databases/{db}/collections/{collection}/create"
      body : "*"
    };
  }
  rpc AlterCollection(AlterCollectionRequest) returns (AlterCollectionResponse) {
    option (google.api.http) = {
      post : "/api/v1/databases/{db}/collections/{collection}/alter"
      body : "*"
    };
  }
  rpc DropCollection(DropCollectionRequest) returns (DropCollectionResponse) {
    option (google.api.http) = {
      delete : "/api/v1/databases/{db}/collections/{collection}/drop"
    };
  }
  rpc TruncateCollection(TruncateCollectionRequest) returns (TruncateCollectionResponse) {
    option (google.api.http) = {
      delete : "/api/v1/databases/{db}/collections/{collection}/truncate"
    };
  }
  rpc ListDatabases(ListDatabasesRequest) returns (ListDatabasesResponse) {
    option (google.api.http) = {
      get : "/api/v1/databases/list"
    };
  }
  rpc ListCollections(ListCollectionsRequest) returns (ListCollectionsResponse) {
    option (google.api.http) = {
      get : "/api/v1/databases/{db}/collections/list"
    };
  }

  rpc CreateDatabase(CreateDatabaseRequest) returns (CreateDatabaseResponse) {
    option (google.api.http) = {
      post : "/api/v1/databases/{db}/create"
      body : "*"
    };
  }

  rpc DropDatabase(DropDatabaseRequest) returns (DropDatabaseResponse) {
    option (google.api.http) = {
      delete : "/api/v1/databases/{db}/drop"
      body : "*"
    };
  }
}
